# ibex-affine

./: CMakeLists.txt  README.md  ibex-affine-config.cmake.in  ibex-affine.pc.in  wscript
examples/: arith03.cpp  ex_affineform.cpp  makefile
src/: CMakeLists.txt
src/arithmetic/: ibex_Affine.h  ibex_Affine2_fAF2.cpp  ibex_Affine2_fAF2.h  ibex_Affine3_fAFFullI.cpp  ibex_Affine3_fAFFullI.h  ibex_AffineDomain.h  ibex_AffineMain.h  ibex_AffineMatrix.h  ibex_AffineVar.cpp  ibex_AffineVar.h  ibex_AffineVector.h
src/contractor/: ibex_CtcAffineFwdBwd.cpp  ibex_CtcAffineFwdBwd.h
src/function/: ibex_AffineEval.h
src/numeric/: ibex_LinearizerAffine2.cpp  ibex_LinearizerAffine2.h
tests/: CMakeLists.txt  TestAffineArith.cpp  TestAffineArith.h  TestAffineBase.cpp  TestAffineBase.h  TestAffineEval.cpp  TestAffineEval.h  TestAffineVector.cpp  TestAffineVector.h  TestCtcAffineFwdBwd.cpp  TestCtcAffineFwdBwd.h  TestLinearizerAffine2.cpp  TestLinearizerAffine2.h
